--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss-styled-syntax": "^0.7.0",
+    "prettier": "^3.4.2",
+    "prop-types": "^15.8.1",
+    "stylelint": "^16.12.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-order": "^6.0.4",
     "vite": "^6.0.5"
   }
 }
